--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "styled-components": "^2.4.1",
+    "styled-system": "^3.1.4",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
