--- a/package.json
+++ b/package.json
@@ -114,5 +114,10 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-  }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "./scripts/eslint-modified-files.sh && ./scripts/prohibit-commit-on-develop.sh"
+    }
+  },
 }
