--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-snapshot": "^1.3.0",
-    "rebass": "^1.0.7",
     "redux": "^4.0.0",
     "redux-catch": "^1.3.1",
     "redux-devtools-extension": "^2.13.2",
@@ -55,7 +54,6 @@
     "styled-components": "^2.4.1",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
-    "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
     "whatwg-fetch": "2.0.3"
@@ -70,7 +68,9 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2"
+    "eslint-plugin-react": "^7.8.2",
+    "react-styleguidist": "^9.0.1",
+    "webpack": "^4.29.6"
   },
   "jest": {
     "collectCoverageFrom": [
